--- a/Plantasia/Podfile
+++ b/Plantasia/Podfile
@@ -6,5 +6,9 @@ target 'Plantasia' do
   use_frameworks!
 
   # Pods for Plantasia
+  pod 'SnapKit', '~> 5.0.0'
+  pod 'Bond', '~> 7.6.6'
+  pod 'RealmSwift', '~> 4.4.1'
+  pod 'NVActivityIndicatorView', '~> 4.8.0'
 
 end
