--- a/Plantasia/Podfile
+++ b/Plantasia/Podfile
@@ -9,5 +9,6 @@ target 'Plantasia' do
   pod 'SnapKit', '~> 5.0.0'
   pod 'Bond', '~> 7.6.6'
   pod 'RealmSwift', '~> 4.4.1'
-
+  pod 'DTPhotoViewerController', '~> 1.2.5'
+  
 end
