--- a/Plantasia/Podfile
+++ b/Plantasia/Podfile
@@ -10,5 +10,6 @@ target 'Plantasia' do
   pod 'Bond', '~> 7.6.6'
   pod 'RealmSwift', '~> 4.4.1'
   pod 'DTPhotoViewerController', '~> 1.2.5'
-  
+  pod 'RAMAnimatedTabBarController', '~> 5.1.0'
+
 end
